@@ -1,3 +1,14 @@
+2002-10-10  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/canvPs.test: tests for canvas embedded window ps generation
+	* generic/tkCanvWind.c (CanvasPsWindow): removed dead code loop.
+	* generic/tkCanvas.h: moved TkColormapData struct to tkCanvPs.c
+	* generic/tkCanvPs.c (TkImageGetColor): corrected bogus use of
+	TkColormapData on Windows.  Non-separated data may need correction
+	as well.
+	* win/tkWinImage.c (XGetImage, XGetImageZPixmap): added support
+	for generating ps for embedded windows on canvases.
+
 2002-10-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/README: doc'ed --enable-symbols options.
